Added Global Event Listener

--- a/Modal Windows/index.html
+++ b/Modal Windows/index.html
@@ -15,9 +15,9 @@
             <div class="navbar">
                 <h1>VMI</h1>
                 <ul>
-                    <li>Modal 1</li>
-                    <li>Modal 2</li>
-                    <li>Modal 3</li>
+                    <li>Just </li>
+                    <li>Playing</li>
+                    <li>Around</li>
                 </ul>
             </div>
         </div>
@@ -34,26 +34,36 @@
                 <section>
                     <div class="window-1">
                         <h3>Click button below to Open Modal</h3>
-                        <button class="btn btn-primary">Open Modal</button>
+                        <button class="btn btn-primary show-modal">Open Modal</button>
                     </div>
                 </section>
                 <section>
                     <div class="window-2">
                         <h3>Click button below to Open Modal</h3>
-                        <button class="btn btn-primary">Open Modal</button>
+                        <button class="btn btn-primary show-modal">Open Modal</button>
                     </div>
                 </section>
                 <section>
                     <div class="window-3"></div>
                     <h3>Click button below to Open Modal</h3>
-                    <button class="btn btn-primary">Open Modal</button>
+                    <button class="btn btn-primary show-modal">Open Modal</button>
                 </section>
             </div>
+
+            <div class="modal hidden">
+                <button class="close-modal">&times;</button>
+                <h3>I'm a Modal Window</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus vel ut enim? Quas maxime porro
+                    odit nobis esse. Exercitationem, vel! Recusandae ipsa non, culpa, eum natus tenetur omnis quaerat
+                    corrupti unde expedita sapiente perspiciatis possimus harum sint quod modi, quibusdam et veritatis
+                    tempora nemo dolore dicta. Quos ipsa quidem harum!</p>
+            </div>
+            <div class="overlay hidden"></div>
 
         </div>
 
     </main>
-
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
