Add Script, Styling

--- a/index.html
+++ b/index.html
@@ -31,34 +31,53 @@
 					</ul>
 				</nav>
 				<div class="intro">
-					<div class="intro_content">
-						<h2>Vidal Iseghohimen</h2>
-						<p>Front End Developer</p>
+					<div class="intro__content">
+						<h2 class="title">Vidal Iseghohimen</h2>
+						<h3>
+							I am a
+							<span
+								class="txt-type"
+								data-wait="3000"
+								data-words='["Front End", "Design System"]'
+							></span>
+							Developer
+						</h3>
+						<ul class="social-links">
+							<li class="social-link">
+								<a href="https://www.instagram.com" target="_blank"
+									><i class="fab fa-instagram"></i
+								></a>
+							</li>
+							<li class="social-link">
+								<a href="#"><i class="far fa-envelope"></i></a>
+							</li>
+							<li class="social-link">
+								<a
+									href="https://www.linkedin.com/in/vidaliseghohimen/"
+									target="_blank"
+									><i class="fab fa-linkedin"></i
+								></a>
+							</li>
+							<li class="social-link">
+								<a href=""><i class="fab fa-facebook"></i></a>
+							</li>
+							<li class="social-link">
+								<a href="https://github.com/Viseghoh" target="_blank"
+									><i class="fab fa-github"></i
+								></a>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
 		</header>
-		<main></main>
-		<!-- <footer>
+		<main>
 			<div class="container">
-				<div class="footer">
-					<ul class="footer-links">
-						<li>
-							<a href="#"><i class="fab fa-instagram"></i></a>
-						</li>
-						<li>
-							<a href="#"><i class="fab fa-youtube"></i></a>
-						</li>
-						<li>
-							<a href="#"><i class="fab fa-linkedin"></i></a>
-						</li>
-						<li>
-							<a href="#"><i class="fab fa-facebook"></i></a>
-						</li>
-					</ul>
-				</div>
-			</div> -->
-		</footer>
+				<section class="experience"></section>
+			</div>
+		</main>
+
 		<script src="./js/scripts.js"></script>
+		<script src="./js/typewriter.js"></script>
 	</body>
 </html>
